--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,11 @@
-@import "normalize.css";
+:root {
+  --green: #213547;
+  --black: #242424;
+  --green-dark: #33a06f;
+  --white: #fff;
+  --border-radius: 10px;
+  --font: "Crete Round", serif;
+}
 
 * {
   box-sizing: border-box;
@@ -7,9 +14,22 @@
 }
 
 body {
-  background: lightpink;
-  font-family: "Crete Round", serif;
+  background: var(--green);
+  font-family: var(--font);
   font-weight: 400;
+}
+
+a {
+  transition: .4s;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
 
 .container {
